--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     </head>
     <body>
         <!-- Scenes -->
-        <div id="scene-splash" class="scene" style="display: none">
+        <div id="scene-splash" class="scene">
             <img src="./Assets//img/loading.gif" width="286" />
         </div>
         <div id="scene-profiles" class="scene flex-column" style="display: none" >
@@ -309,14 +309,7 @@
             <div id="snippet-serie-details" style="display: none;">
                 <label>Director : <span id="director"></span></label>
                 <label id="genre"></label>
-                <div class="div-button">
-
-                </div>
-                <!-- <button class="btn focusable" data-action="watch"><i class="bi bi-play-fill"></i>Watch serie</button>
-                <button class="btn focusable" data-action="trailer"><i class="bi bi-collection-play-fill"></i>Watch trailer</button>
-                <button class="btn focusable" data-action="episodes"><i class="bi bi-bar-chart-steps"></i>Saisons and episodes</button>
-                <button class="btn focusable" data-action="cc"><i class="bi bi-badge-cc-fill"></i>Audio and CC</button>
-                <button class="btn focusable" data-action="later"><i class="bi bi-plus-square-fill"></i>Add to watch later</button> -->
+                <div></div>                
             </div>
             <div id="snippet-serie-episodes" style="display: none;"></div>
         </div>
