player awaled l3abd

--- a/index.html
+++ b/index.html
@@ -280,8 +280,8 @@
             </div>
             <div id="trailer">
                 <div></div>
-                <iframe src="" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <img alt="trailer" src="https://a-static.besthdwallpaper.com/oblivion-movie-poster-wallpaper-11407_L.jpg" />
+                <iframe src="" title="YouTube video player" class="trailer_video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <img alt="trailer" src="" class="trailer_image"/>
             </div>
             <div id="snippet-movie-list"></div>
             <div id="snippet-movie-details" style="display: none;">
