--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
             <div id="vid-Title">
                 <span> Titre </span>
             </div>
-            <div id="audio-cc-list" style="display: none"></div>
+            <div id="snippet-subtitles-audio" class="show_details"></div>
         </div>
         <!-- Reset Modal -->
         <div
