--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <link rel="stylesheet" type="text/css" href="css/series.css" />
         <link rel="stylesheet" type="text/css" href="css/error.css" />
         <link rel="stylesheet" type="text/css" href="css/player.css" />
+        <link rel="stylesheet" type="text/css" href="css/player-live.css" />
         <link rel="stylesheet" type="text/css" href="css/subtitles.css" />
         <link rel="stylesheet" type="text/css" href="css/serie-episodes.css" />
         <link rel="stylesheet" type="text/css" href="css/watch-later.css" />
@@ -93,6 +94,7 @@
         <script src="js/snippets/serie-details.js"></script>
         <script src="js/snippets/serie-episodes.js"></script>
         <script src="js/snippets/player.js"></script>
+        <script src="js/snippets/player-live.js"></script>
         <script src="js/snippets/subtitles.js"></script>
 
         <script src="config.js"></script>
@@ -388,6 +390,17 @@
                 <span> Titre </span>
             </div>
             <div id="snippet-subtitles-audio" class="show_details"></div>
+
+        </div id="snippet-live-player">
+            <div id="container">
+                <div id="elements">
+                    <img src="" />
+                    <span id="title-live"></span>
+                    <span id="EPG"></span>
+                </div>
+            </div>
+        <div >
+
         </div>
         <!-- Reset Modal -->
         <div
