--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <script src="js/snippets/later-list.js"></script>
         <script src="js/snippets/movie-details.js"></script>
         <script src="js/snippets/serie-details.js"></script>
-        <script src="js/snippets/serie-episodes.js"></script>
+        <script src="js/snippets/serie-saisons.js"></script>
         <script src="js/snippets/player.js"></script>
         <script src="js/snippets/player-live.js"></script>
         <script src="js/snippets/subtitles.js"></script>
@@ -313,7 +313,7 @@
                 <label id="genre"></label>
                 <div></div>                
             </div>
-            <div id="snippet-serie-episodes" style="display: none;"></div>
+            <div id="snippet-serie-saisons" style="display: none;"></div>
         </div>
         <div id="scene-settings" class="scene" style="display: none">
             <div > 
